syntax = "proto3";

option csharp_namespace = "TaskManagerProvider.Protos";

import "task_item.proto";

package dataservice;

// Методы для работы с задачами
service TaskItemService {
  rpc GetTasks (GetTasksRequest) returns (stream TaskItem);
  rpc GetUserTasks (GetUserTasksRequest) returns (stream TaskItem);
  rpc GetTaskById (GetTaskByIdRequest) returns (GetTaskByIdResponse);
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
}

// Запросы и ответы для задач
message GetTasksRequest {}
message GetTasksResponse {
  repeated TaskItem tasks = 1;
}

message GetUserTasksRequest {
  int32 user_id = 1;
}
message GetUserTasksResponse {
  repeated TaskItem tasks = 1;
}

message GetTaskByIdRequest {
  int32 id = 1;
}
message GetTaskByIdResponse {
  optional TaskItem task = 1;
}

message CreateTaskRequest {
  TaskItem task = 1;
}
message CreateTaskResponse {
  TaskItem task = 1;
}

message UpdateTaskRequest {
  TaskItem task = 1;
}
message UpdateTaskResponse {
  optional TaskItem task = 1;
}

message DeleteTaskRequest {
  int32 id = 1;
}
message DeleteTaskResponse {
}
